# dawn

./: .dockerignore  .eslintrc  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  Cargo.toml  Dockerfile  README.md  cspell.json  docker-compose.yml  package.json
.claude/: settings.json
.claude/agents/: cli-reviewer.md  code-reviewer.md
.claude/commands/review/: cli.md  code.md  project.md
.claude/contexts/: dev.md  research.md  review.md
.claude/hooks/: clippy-check.sh  clippy_check.sh
.claude/rules/: coding-style.md  development-principles.md  rust.md  security.md  testing.md
.claude/skills/coding-standards/: SKILL.md
.claude/skills/project-guidelines/: SKILL.md
.claude/skills/security-review/: SKILL.md
.claude/skills/sqlite/: SKILL.md
.claude/skills/taskwarrior/: SKILL.md  columns-rendering.md  commands.md  data-model.md  filter-system.md  recurrence.md  rust-patterns.md
.claude/skills/tdd-workflow/: SKILL.md  tdd-workflow.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  docker-image.yml  est-tdocker-image.yml  release-docker-image.yml  security-audit.yml  test-image.yml
apps/api/: .eslintrc.js  package.json  swagger.yaml
apps/api/prisma/: schema.prisma
apps/api/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
apps/api/src/entities/: task.entity.ts
apps/api/src/prisma/: prisma.service.ts
apps/api/src/task/dto/: create-task.dto.ts  update-task.dto.ts
apps/api/src/task/entities/: task.entity.ts
apps/client/: .eslintrc  index.html  package.json  vite.config.ts
apps/client/src/: App.tsx  main.tsx  style.css
apps/client/src/Components/: FooterComponent.tsx  ListComponent.tsx  PageTitleComponent.tsx  TaskEditModal.tsx  TaskInputForm.tsx
apps/client/src/selectors/: task.ts
docs/: class.md  diagram.drawio  er.md
inbound/cli/: Cargo.toml
inbound/cli/src/: cli.rs  main.rs
inbounds/cli/: Cargo.toml
inbounds/cli/src/: main.rs
inbounds/cli/src/lib/: cli.rs  context.rs  dict.rs  handler.rs  lib.rs  parser.rs  table.rs  utils.rs
inbounds/cli/src/lib/handler/: add.rs  delete.rs  done.rs  modify.rs  status.rs  update.rs
inbounds/cli/src/lib/table/: age.rs  all_row.rs  base_table.rs  next_row.rs  next_table.rs  status.rs
lib/dawn/src/: lib.rs
libs/: .sqlfluff
libs/dawn/: Cargo.toml
libs/dawn/sql/: schema.sql
libs/dawn/src/: domain.rs  lib.rs  outbound.rs
libs/dawn/src/domain/: filter.rs  task.rs
libs/dawn/src/domain/filter/: index_range.rs
libs/dawn/src/domain/task/: description.rs  index.rs  port.rs  service.rs  unique_id.rs
libs/dawn/src/outbound/: query_builder.rs  sqlite.rs
src/lib/: domain.rs  inbound.rs  lib.rs  outbound.rs
src/lib/domain/: auth.rs  calendar.rs
src/lib/domain/auth/: port.rs  service.rs
src/lib/domain/calendar/: port.rs  service.rs
src/lib/inbound/: cli.rs
src/lib/outbound/: google_calendar.rs
src/lib/outbound/google_calendar/: adapter.rs  auth.rs  token_storage.rs
