# https://doc.rust-lang.org/cargo/reference/workspaces.html
[workspace]
resolver = "3"
members = ["lib/dawn", "inbound/cli"]

[workspace.dependencies]
anyhow = "1.0.100"
dawn = { path = "lib/dawn" }

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/rvnkcode/dawn"
license = "MIT"
