# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "dawn"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/rvnkcode/dawn"
license = "MIT"

[lib]
name = "dawn"
path = "src/lib/lib.rs"

[[bin]]
name = "dawn"
path = "src/bin/cli/main.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap"]
google-calendar = [
    "dep:async-trait",
    "dep:dotenvy",
    "dep:keyring",
    "dep:reqwest",
    "dep:serde_json",
    "dep:tokio",
    "dep:yup-oauth2",
]

[dependencies]
anyhow = "1.0.100"
async-trait = { version = "0.1.89", optional = true }
chrono = "0.4.43"
clap = { version = "4", features = ["derive"], optional = true }
dotenvy = { version = "0.15.7", optional = true }
keyring = { version = "3.6.3", optional = true }
reqwest = { version = "0.13.1", features = ["json"], optional = true }
serde_json = { version = "1.0.149", optional = true }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt", "macros"], optional = true }
yup-oauth2 = { version = "12.1.2", optional = true }
