[package]
name = "dawn_cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "dawn_cli"
path = "src/lib.rs"

[[bin]]
name = "dawn"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.55", features = ["derive"] }
dawn = { workspace = true }
