[package]
name = "dawn_cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "dawn_cli"
path = "src/lib/lib.rs"

[[bin]]
name = "dawn"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
dawn = { workspace = true }
regex = "1.12.2"
tabled = "0.20.0"
thiserror = { workspace = true }
spellbook = "0.3"
