[package]
name = "dawn"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "dawn"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
dirs = "6.0.0"
nanoid = "0.4.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
thiserror = { workspace = true }
